...
    viewModel: RegisterScreenViewModel = hiltViewModel()
) {
    val uiState by viewModel.uiState.collectAsState()
    val context = LocalContext.current
    val keyboardController = LocalSoftwareKeyboardController.current

    Box(modifier = Modifier.fillMaxSize().testTag("REGISTER_SCREEN")) {


        RegisterBackgroundHeader(
            modifier = Modifier
                .fillMaxWidth()
                .fillMaxHeight(0.35f)
...
